Fixed spacing above Trip Life
Created a new class to fix just that.

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -464,6 +464,16 @@ header {
   margin-top: 10px;
 }
 
+.grid-container-2-fix {
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: center;
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+  margin-top: 10px;
+  margin-bottom: 40px;
+}
+
 // .photo-group .photo:hover {
 //   opacity: 0.5;
 // }
